ingress/deployment/helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  labels:
    app: helloworld-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloworld-deployment
  template:
    metadata:
      labels:
        app: helloworld-deployment
    spec:
      containers:
      - name: helloworld-deployment
        image: zxcvbnius/docker-demo
        ports:
        - containerPort: 3000
