ingress/deployment/helloworld-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-deployment-service
  namespace: zach-test
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: helloworld-deployment
