ingress/deployment/helloworld-deployment-ingress-3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: helloworld-deployment-ingress-3
   namespace: zach-test
spec:
   rules:
   - host: helloworld.example.com
     http:
       paths:
       - path: /
         backend:
           serviceName: helloworld-deployment-service
           servicePort: 3000
